# academie

./: README.md  datagen.py  pyproject.toml  requirements.txt
archive/: datagen.sh
archive/data/: ams-ix_asn.latest  de-cix_fra_asn.latest  ixbr_ba_asn.latest  ixbr_bel_asn.latest  ixbr_cas_asn.latest  ixbr_ce_asn.latest  ixbr_cgb_asn.latest  ixbr_cpv_asn.latest  ixbr_cxj_asn.latest  ixbr_df_asn.latest  ixbr_igu_asn.latest  ixbr_jpa_asn.latest  ixbr_laj_asn.latest  ixbr_lda_asn.latest  ixbr_mao_asn.latest  ixbr_mg_asn.latest  ixbr_mgf_asn.latest  ixbr_nat_asn.latest  ixbr_pe_asn.latest  ixbr_pr_asn.latest  ixbr_ria_asn.latest  ixbr_rj_asn.latest  ixbr_rj_asn_lg_origin  ixbr_rs_asn.latest  ixbr_sc_asn.latest  ixbr_se_asn.latest  ixbr_sjc_asn.latest  ixbr_sjp_asn.latest  ixbr_sp_asn.latest  ixbr_sp_asn_lg_origin  ixbr_vix_asn.latest
archive/report/: ams-ix_asn.latest_cc  ams-ix_asn.latest_cc_summary  ams-ix_asn.latest_missing_cc  de-cix_fra_asn.latest_cc  de-cix_fra_asn.latest_cc_summary  de-cix_fra_asn.latest_missing_cc  ixbr_ba_asn.latest_cc  ixbr_ba_asn.latest_cc_summary  ixbr_bel_asn.latest_cc  ixbr_bel_asn.latest_cc_summary  ixbr_cas_asn.latest_cc  ixbr_cas_asn.latest_cc_summary  ixbr_ce_asn.latest_cc  ixbr_ce_asn.latest_cc_summary  ixbr_cgb_asn.latest_cc  ixbr_cgb_asn.latest_cc_summary  ixbr_cpv_asn.latest_cc  ixbr_cpv_asn.latest_cc_summary  ixbr_cxj_asn.latest_cc  ixbr_cxj_asn.latest_cc_summary  ixbr_df_asn.latest_cc  ixbr_df_asn.latest_cc_summary  ixbr_igu_asn.latest_cc  ixbr_igu_asn.latest_cc_summary  ixbr_jpa_asn.latest_cc  (+43 more)
dgen/: datagen.py
(+670 files in other folders)
