[project]
name = "datagen"
description = "Datagen - Generate routes summary per country."
version = "0.0.1"
authors = [{ name = "Tiago Felipe Goncalves", email = "tfgoncalves@xpto.it" }]
readme = "README.md"
requires-python = ">=3.12"
keywords = ["peering", "tool", "shame", "hall"]
dependencies = [
    "requests",
    "backoff",
    "aiohttp",
    "black",
    "isort",
    "pylint",
    "ruff",
    "pytest",
    "yamllint",
    "uv",
]

[project.urls]
documentation = "https://github.com/kiraum/academie/blob/main/README.md"
repository = "https://github.com/kiraum/acedemie/"

[tool.pylint.messages_control]
disable = [
    "format",
]

[tool.isort]
profile = "black"
